{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 41,
  "lineage": "ca2e9b87-4332-7ab5-1962-ead0f6cbef2d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:916586394009:network-acl/acl-0c56f792cd19ba660",
            "egress": [],
            "id": "acl-0c56f792cd19ba660",
            "ingress": [],
            "owner_id": "916586394009",
            "subnet_ids": [
              "subnet-04fd618f91c1ce457",
              "subnet-0fc248da47a5d6d2c"
            ],
            "tags": {
              "Name": "xbrain-w3-nacl-app",
              "Tier": "application"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "xbrain-w3-nacl-app",
              "Project": "xbrain",
              "Tier": "application",
              "Week": "3"
            },
            "vpc_id": "vpc-0e6246cd908b5daa5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.app",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:916586394009:network-acl/acl-0c1077031ac951bb0",
            "egress": [],
            "id": "acl-0c1077031ac951bb0",
            "ingress": [],
            "owner_id": "916586394009",
            "subnet_ids": [
              "subnet-06ec5972cea16d731",
              "subnet-0d8be28d12f1a56af"
            ],
            "tags": {
              "Name": "xbrain-w3-nacl-db",
              "Tier": "database"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "xbrain-w3-nacl-db",
              "Project": "xbrain",
              "Tier": "database",
              "Week": "3"
            },
            "vpc_id": "vpc-0e6246cd908b5daa5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.db",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "app_inbound_ephemeral",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/16",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3356634040",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0c56f792cd19ba660",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 200,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.app",
            "aws_subnet.app",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "app_inbound_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/16",
            "egress": false,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3027439203",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0c56f792cd19ba660",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.app",
            "aws_subnet.app",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "app_outbound_ephemeral",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/16",
            "egress": true,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-771859987",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0c56f792cd19ba660",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 200,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.app",
            "aws_subnet.app",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "app_outbound_postgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/16",
            "egress": true,
            "from_port": 5432,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2479606493",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0c56f792cd19ba660",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.app",
            "aws_subnet.app",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "db_inbound_ephemeral",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/16",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1379532757",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0c1077031ac951bb0",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 200,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.db",
            "aws_subnet.db",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "db_inbound_postgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/16",
            "egress": false,
            "from_port": 5432,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-777574926",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0c1077031ac951bb0",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.db",
            "aws_subnet.db",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "db_outbound_ephemeral",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/16",
            "egress": true,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1743823895",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0c1077031ac951bb0",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 300,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.db",
            "aws_subnet.db",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "db_outbound_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/16",
            "egress": true,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-128717148",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0c1077031ac951bb0",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.db",
            "aws_subnet.db",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "db_outbound_postgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/16",
            "egress": true,
            "from_port": 5432,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3127278994",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0c1077031ac951bb0",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 200,
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.db",
            "aws_subnet.db",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:916586394009:route-table/rtb-068cdc50b5cc1f7b4",
            "id": "rtb-068cdc50b5cc1f7b4",
            "owner_id": "916586394009",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "xbrain-w3-rtb-app"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "xbrain-w3-rtb-app",
              "Project": "xbrain",
              "Week": "3"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e6246cd908b5daa5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:916586394009:route-table/rtb-0a78b018f0a12bfee",
            "id": "rtb-0a78b018f0a12bfee",
            "owner_id": "916586394009",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "xbrain-w3-rtb-db"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "xbrain-w3-rtb-db",
              "Project": "xbrain",
              "Week": "3"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e6246cd908b5daa5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d79c54563b5f33e0",
            "route_table_id": "rtb-068cdc50b5cc1f7b4",
            "subnet_id": "subnet-0fc248da47a5d6d2c"
          },
          "dependencies": [
            "aws_route_table.app",
            "aws_subnet.app",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0890bb4d0251be7de",
            "route_table_id": "rtb-068cdc50b5cc1f7b4",
            "subnet_id": "subnet-04fd618f91c1ce457"
          },
          "dependencies": [
            "aws_route_table.app",
            "aws_subnet.app",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08135f617fb068029",
            "route_table_id": "rtb-0a78b018f0a12bfee",
            "subnet_id": "subnet-06ec5972cea16d731"
          },
          "dependencies": [
            "aws_route_table.db",
            "aws_subnet.db",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c2a4416da0cd7a70",
            "route_table_id": "rtb-0a78b018f0a12bfee",
            "subnet_id": "subnet-0d8be28d12f1a56af"
          },
          "dependencies": [
            "aws_route_table.db",
            "aws_subnet.db",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:916586394009:security-group/sg-07890de0aaab6c762",
            "description": "Security group for Lambda functions in the application tier",
            "egress": [],
            "id": "sg-07890de0aaab6c762",
            "ingress": [],
            "name": "xbrain-w3-sg-lambda",
            "name_prefix": "",
            "owner_id": "916586394009",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "xbrain-w3-sg-lambda",
              "Tier": "application"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "xbrain-w3-sg-lambda",
              "Project": "xbrain",
              "Tier": "application",
              "Week": "3"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e6246cd908b5daa5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_postgresql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:916586394009:security-group/sg-0b9758682d0fd27ab",
            "description": "Security group for RDS PostgreSQL - accepts only from RDS Proxy SG",
            "egress": [],
            "id": "sg-0b9758682d0fd27ab",
            "ingress": [],
            "name": "xbrain-w3-sg-rds-postgresql",
            "name_prefix": "",
            "owner_id": "916586394009",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "xbrain-w3-sg-rds-postgresql",
              "Tier": "database"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "xbrain-w3-sg-rds-postgresql",
              "Project": "xbrain",
              "Tier": "database",
              "Week": "3"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e6246cd908b5daa5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:916586394009:security-group/sg-08e8b446686872a31",
            "description": "Security group for RDS Proxy - accepts only from Lambda SG",
            "egress": [],
            "id": "sg-08e8b446686872a31",
            "ingress": [],
            "name": "xbrain-w3-sg-rds-proxy",
            "name_prefix": "",
            "owner_id": "916586394009",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "xbrain-w3-sg-rds-proxy",
              "Tier": "database"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "xbrain-w3-sg-rds-proxy",
              "Project": "xbrain",
              "Tier": "database",
              "Week": "3"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e6246cd908b5daa5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:916586394009:security-group/sg-02572b4acfba5197d",
            "description": "Shared SG for Interface VPC Endpoints - accepts HTTPS from VPC",
            "egress": [],
            "id": "sg-02572b4acfba5197d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTPS from anywhere within the VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "xbrain-w3-sg-vpc-endpoints",
            "name_prefix": "",
            "owner_id": "916586394009",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "xbrain-w3-sg-vpc-endpoints"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "xbrain-w3-sg-vpc-endpoints",
              "Project": "xbrain",
              "Week": "3"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e6246cd908b5daa5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lambda_egress_https_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Lambda to Interface VPC Endpoints (HTTPS)",
            "from_port": 443,
            "id": "sgrule-2878152212",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07890de0aaab6c762",
            "security_group_rule_id": "sgr-02df9f4e9ac2e9af5",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lambda",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lambda_egress_to_rds_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Lambda to RDS Proxy (PostgreSQL)",
            "from_port": 5432,
            "id": "sgrule-1380420837",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07890de0aaab6c762",
            "security_group_rule_id": "sgr-09f2d42941206d788",
            "self": false,
            "source_security_group_id": "sg-08e8b446686872a31",
            "timeouts": null,
            "to_port": 5432,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lambda",
            "aws_security_group.rds_proxy",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_postgresql_ingress_from_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Accept connections from RDS Proxy SG only",
            "from_port": 5432,
            "id": "sgrule-2268091054",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b9758682d0fd27ab",
            "security_group_rule_id": "sgr-00092aa0066708f73",
            "self": false,
            "source_security_group_id": "sg-08e8b446686872a31",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.rds_postgresql",
            "aws_security_group.rds_proxy",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_proxy_egress_secrets_manager",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "RDS Proxy to Secrets Manager VPC Endpoint (fetch master password)",
            "from_port": 443,
            "id": "sgrule-3793429353",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08e8b446686872a31",
            "security_group_rule_id": "sgr-0adc2c7be5b4b34a6",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.rds_proxy",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_proxy_egress_to_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "RDS Proxy to RDS PostgreSQL (native DB login)",
            "from_port": 5432,
            "id": "sgrule-1581339368",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08e8b446686872a31",
            "security_group_rule_id": "sgr-0453f6cd81d73ecaa",
            "self": false,
            "source_security_group_id": "sg-0b9758682d0fd27ab",
            "timeouts": null,
            "to_port": 5432,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.rds_postgresql",
            "aws_security_group.rds_proxy",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_proxy_ingress_from_lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Accept connections from Lambda SG only",
            "from_port": 5432,
            "id": "sgrule-2276324778",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08e8b446686872a31",
            "security_group_rule_id": "sgr-0e1134412df2cb9b8",
            "self": false,
            "source_security_group_id": "sg-07890de0aaab6c762",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lambda",
            "aws_security_group.rds_proxy",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:916586394009:subnet/subnet-0fc248da47a5d6d2c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.0.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc248da47a5d6d2c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "916586394009",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "xbrain-w3-app-subnet-1",
              "Tier": "application"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "xbrain-w3-app-subnet-1",
              "Project": "xbrain",
              "Tier": "application",
              "Week": "3"
            },
            "vpc_id": "vpc-0e6246cd908b5daa5"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:916586394009:subnet/subnet-04fd618f91c1ce457",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.64.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04fd618f91c1ce457",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "916586394009",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "xbrain-w3-app-subnet-2",
              "Tier": "application"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "xbrain-w3-app-subnet-2",
              "Project": "xbrain",
              "Tier": "application",
              "Week": "3"
            },
            "vpc_id": "vpc-0e6246cd908b5daa5"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:916586394009:subnet/subnet-06ec5972cea16d731",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.128.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ec5972cea16d731",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "916586394009",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "xbrain-w3-db-subnet-1",
              "Tier": "database"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "xbrain-w3-db-subnet-1",
              "Project": "xbrain",
              "Tier": "database",
              "Week": "3"
            },
            "vpc_id": "vpc-0e6246cd908b5daa5"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:916586394009:subnet/subnet-0d8be28d12f1a56af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.129.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d8be28d12f1a56af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "916586394009",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "xbrain-w3-db-subnet-2",
              "Tier": "database"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "xbrain-w3-db-subnet-2",
              "Project": "xbrain",
              "Tier": "database",
              "Week": "3"
            },
            "vpc_id": "vpc-0e6246cd908b5daa5"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:916586394009:vpc/vpc-0e6246cd908b5daa5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d5377a6d4a60ccdf",
            "default_route_table_id": "rtb-05f8992e4b4d0c1d7",
            "default_security_group_id": "sg-01cda9b0e4b019d3b",
            "dhcp_options_id": "dopt-024345ad75cfd4ce9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e6246cd908b5daa5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05f8992e4b4d0c1d7",
            "owner_id": "916586394009",
            "tags": {
              "Name": "xbrain-w3-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "xbrain-w3-vpc",
              "Project": "xbrain",
              "Week": "3"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "bedrock_agent_runtime",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:916586394009:vpc-endpoint/vpce-011fb0536ba5ce728",
            "dns_entry": [
              {
                "dns_name": "vpce-011fb0536ba5ce728-4dpopad1.bedrock-agent-runtime.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-011fb0536ba5ce728-4dpopad1-us-west-2b.bedrock-agent-runtime.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-011fb0536ba5ce728-4dpopad1-us-west-2a.bedrock-agent-runtime.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "bedrock-agent-runtime.us-west-2.amazonaws.com",
                "hosted_zone_id": "Z03262531WIDP515F6LLY"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-011fb0536ba5ce728",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0062da353d1d10a45",
              "eni-0fe41acee3f22c3b9"
            ],
            "owner_id": "916586394009",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-02572b4acfba5197d"
            ],
            "service_name": "com.amazonaws.us-west-2.bedrock-agent-runtime",
            "service_region": "us-west-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.127.236",
                "subnet_id": "subnet-04fd618f91c1ce457"
              },
              {
                "ipv4": "10.0.34.116",
                "subnet_id": "subnet-0fc248da47a5d6d2c"
              }
            ],
            "subnet_ids": [
              "subnet-04fd618f91c1ce457",
              "subnet-0fc248da47a5d6d2c"
            ],
            "tags": {
              "Name": "xbrain-w3-vpce-bedrock-agent-runtime"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "xbrain-w3-vpce-bedrock-agent-runtime",
              "Project": "xbrain",
              "Week": "3"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0e6246cd908b5daa5"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_subnet.app",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "bedrock_runtime",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:916586394009:vpc-endpoint/vpce-0b493ffdfa2aa5cbb",
            "dns_entry": [
              {
                "dns_name": "vpce-0b493ffdfa2aa5cbb-iptj2k2e.bedrock-runtime.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-0b493ffdfa2aa5cbb-iptj2k2e-us-west-2a.bedrock-runtime.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-0b493ffdfa2aa5cbb-iptj2k2e-us-west-2b.bedrock-runtime.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "bedrock-runtime.us-west-2.amazonaws.com",
                "hosted_zone_id": "Z09105601ZO592TX5G5KA"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0b493ffdfa2aa5cbb",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00114da6f6addb800",
              "eni-03e4314e1440d93fd"
            ],
            "owner_id": "916586394009",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-02572b4acfba5197d"
            ],
            "service_name": "com.amazonaws.us-west-2.bedrock-runtime",
            "service_region": "us-west-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.5.131",
                "subnet_id": "subnet-0fc248da47a5d6d2c"
              },
              {
                "ipv4": "10.0.84.65",
                "subnet_id": "subnet-04fd618f91c1ce457"
              }
            ],
            "subnet_ids": [
              "subnet-04fd618f91c1ce457",
              "subnet-0fc248da47a5d6d2c"
            ],
            "tags": {
              "Name": "xbrain-w3-vpce-bedrock-runtime"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "xbrain-w3-vpce-bedrock-runtime",
              "Project": "xbrain",
              "Week": "3"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0e6246cd908b5daa5"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_subnet.app",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "logs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:916586394009:vpc-endpoint/vpce-029cfe55556ff7103",
            "dns_entry": [
              {
                "dns_name": "vpce-029cfe55556ff7103-l6f8ec2v.logs.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-029cfe55556ff7103-l6f8ec2v-us-west-2b.logs.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-029cfe55556ff7103-l6f8ec2v-us-west-2a.logs.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "logs.us-west-2.amazonaws.com",
                "hosted_zone_id": "Z0315159Q01XT79N07V2"
              },
              {
                "dns_name": "streaming-logs.us-west-2.api.aws",
                "hosted_zone_id": "Z05409243OJXMDONYXHBD"
              },
              {
                "dns_name": "logs.us-west-2.api.aws",
                "hosted_zone_id": "Z09096692S5IX3CH55JZ0"
              },
              {
                "dns_name": "streaming-logs.us-west-2.amazonaws.com",
                "hosted_zone_id": "Z09096682J2IG9U801YHH"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-029cfe55556ff7103",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00d08e52a5fcbb4a2",
              "eni-0a4e9dfcd3f0e5f63"
            ],
            "owner_id": "916586394009",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-02572b4acfba5197d"
            ],
            "service_name": "com.amazonaws.us-west-2.logs",
            "service_region": "us-west-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.106.162",
                "subnet_id": "subnet-04fd618f91c1ce457"
              },
              {
                "ipv4": "10.0.16.224",
                "subnet_id": "subnet-0fc248da47a5d6d2c"
              }
            ],
            "subnet_ids": [
              "subnet-04fd618f91c1ce457",
              "subnet-0fc248da47a5d6d2c"
            ],
            "tags": {
              "Name": "xbrain-w3-vpce-logs"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "xbrain-w3-vpce-logs",
              "Project": "xbrain",
              "Week": "3"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0e6246cd908b5daa5"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_subnet.app",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:916586394009:vpc-endpoint/vpce-02a66ccfce3f04b3f",
            "cidr_blocks": [
              "3.5.76.0/22",
              "16.12.96.0/20",
              "16.12.112.0/21",
              "3.5.80.0/21",
              "16.15.32.0/20",
              "18.34.48.0/20",
              "18.34.244.0/22",
              "16.12.88.0/21",
              "52.92.128.0/17",
              "52.218.128.0/17"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-02a66ccfce3f04b3f",
            "ip_address_type": "ipv4",
            "owner_id": "916586394009",
            "policy": "{\"Statement\":[{\"Action\":[\"s3:GetObject\",\"s3:PutObject\",\"s3:ListBucket\",\"s3:DeleteObject\"],\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\",\"Sid\":\"AllowFullS3Access\"}],\"Version\":\"2012-10-17\"}",
            "prefix_list_id": "pl-68a54001",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-068cdc50b5cc1f7b4",
              "rtb-0a78b018f0a12bfee"
            ],
            "service_name": "com.amazonaws.us-west-2.s3",
            "service_region": "us-west-2",
            "state": "available",
            "tags": {
              "Name": "xbrain-w3-vpce-s3-gateway"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "xbrain-w3-vpce-s3-gateway",
              "Project": "xbrain",
              "Week": "3"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0e6246cd908b5daa5"
          },
          "dependencies": [
            "aws_route_table.app",
            "aws_route_table.db",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "secretsmanager",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:916586394009:vpc-endpoint/vpce-0b60d5f04970885c2",
            "dns_entry": [
              {
                "dns_name": "vpce-0b60d5f04970885c2-bx3vuscy.secretsmanager.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-0b60d5f04970885c2-bx3vuscy-us-west-2a.secretsmanager.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-0b60d5f04970885c2-bx3vuscy-us-west-2b.secretsmanager.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "secretsmanager.us-west-2.amazonaws.com",
                "hosted_zone_id": "Z091101221G05C2CKDU1D"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0b60d5f04970885c2",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0cd6721be342a1635",
              "eni-0f5dd3ce2109617b8"
            ],
            "owner_id": "916586394009",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-02572b4acfba5197d"
            ],
            "service_name": "com.amazonaws.us-west-2.secretsmanager",
            "service_region": "us-west-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.52.170",
                "subnet_id": "subnet-0fc248da47a5d6d2c"
              },
              {
                "ipv4": "10.0.64.90",
                "subnet_id": "subnet-04fd618f91c1ce457"
              }
            ],
            "subnet_ids": [
              "subnet-04fd618f91c1ce457",
              "subnet-0fc248da47a5d6d2c"
            ],
            "tags": {
              "Name": "xbrain-w3-vpce-secretsmanager"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "xbrain-w3-vpce-secretsmanager",
              "Project": "xbrain",
              "Week": "3"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0e6246cd908b5daa5"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_subnet.app",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sns",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:916586394009:vpc-endpoint/vpce-062a249812bc603a7",
            "dns_entry": [
              {
                "dns_name": "vpce-062a249812bc603a7-mfsoq0g9.sns.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-062a249812bc603a7-mfsoq0g9-us-west-2b.sns.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-062a249812bc603a7-mfsoq0g9-us-west-2a.sns.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "sns.us-west-2.amazonaws.com",
                "hosted_zone_id": "Z0324479QV2UM92TCUHB"
              },
              {
                "dns_name": "sns.us-west-2.api.aws",
                "hosted_zone_id": "Z03267202WQDORNHOIDRR"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-062a249812bc603a7",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-02bd54fb60b30af8e",
              "eni-05861f1c704fc06cc"
            ],
            "owner_id": "916586394009",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-02572b4acfba5197d"
            ],
            "service_name": "com.amazonaws.us-west-2.sns",
            "service_region": "us-west-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.127.125",
                "subnet_id": "subnet-04fd618f91c1ce457"
              },
              {
                "ipv4": "10.0.42.129",
                "subnet_id": "subnet-0fc248da47a5d6d2c"
              }
            ],
            "subnet_ids": [
              "subnet-04fd618f91c1ce457",
              "subnet-0fc248da47a5d6d2c"
            ],
            "tags": {
              "Name": "xbrain-w3-vpce-sns"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "xbrain-w3-vpce-sns",
              "Project": "xbrain",
              "Week": "3"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0e6246cd908b5daa5"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_subnet.app",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sts",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:916586394009:vpc-endpoint/vpce-0572f7206cb56b656",
            "dns_entry": [
              {
                "dns_name": "vpce-0572f7206cb56b656-i6cscnb0.sts.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-0572f7206cb56b656-i6cscnb0-us-west-2b.sts.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-0572f7206cb56b656-i6cscnb0-us-west-2a.sts.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "sts.us-west-2.amazonaws.com",
                "hosted_zone_id": "Z09103593VH2IJ2T3JS4L"
              },
              {
                "dns_name": "sts.us-west-2.api.aws",
                "hosted_zone_id": "Z03225582MD6V3QB9D941"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0572f7206cb56b656",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-057101856e3bf9abd",
              "eni-05c9af2aea5e232fb"
            ],
            "owner_id": "916586394009",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-02572b4acfba5197d"
            ],
            "service_name": "com.amazonaws.us-west-2.sts",
            "service_region": "us-west-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.34.113",
                "subnet_id": "subnet-0fc248da47a5d6d2c"
              },
              {
                "ipv4": "10.0.71.44",
                "subnet_id": "subnet-04fd618f91c1ce457"
              }
            ],
            "subnet_ids": [
              "subnet-04fd618f91c1ce457",
              "subnet-0fc248da47a5d6d2c"
            ],
            "tags": {
              "Name": "xbrain-w3-vpce-sts"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "xbrain-w3-vpce-sts",
              "Project": "xbrain",
              "Week": "3"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0e6246cd908b5daa5"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_subnet.app",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}